ultimo de ultimo de ultimo

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -254,7 +254,7 @@ tr:nth-child(even) {
 }
 
 /* 
-    LOGOS / BRAND / YOUTUBE / FONTAWESOME
+    LOGOS / BRAND / YOUTUBE / FONTAWESOME / MERGE
 */
 .logoFrangue {
   width: 120px;
