--- a/css/estilo.css
+++ b/css/estilo.css
@@ -479,14 +479,20 @@ tr:nth-child(even) {
   border-radius: 4px;
   cursor: pointer;
 
-  /* position: relative;
-        background: none;
-        transition: color 200ms; */
+/* ANIMACIONES BOTON */
+  background-image: linear-gradient(currentColor, currentColor);
+  background-position: 0% 90%;
+  background-repeat: no-repeat;
+  background-size: 0% 2px;
+  transition: background-size .3s;
+/* ANIMACIONES BOTON */
+
 }
 
 .boton:is(:hover, :focus) {
   color: white;
   transition: 0.7s;
+  background-size: 100% 2px;
 }
 
 /* .boton::after {
@@ -650,6 +656,76 @@ header {
 footer {
   grid-area: footer;
 }
+
+/* ENTREGA CLASE 10 */
+#ubicacionContacto {
+  width: 100%;
+  background-image: linear-gradient(to right, #2c3e50, #3498db);
+  color: #fff;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+
+}
+
+#ubicacionContacto h2 {
+  margin: 20px 40px;
+  font-size: 2.5rem;
+}
+
+#ubicacionContacto p {
+  margin: 40px;
+}
+
+.cajaAnimada {
+  border-top: 2px solid #3fbbc0;
+  border-radius: 4px;
+  height: 250px;
+  width: 500px;
+  margin: 30px;
+  position: absolute;
+  /* Centramos de forma simple */
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  background-color: #fff;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  box-shadow: 10px 10px 10px;
+  opacity: 90%;
+  max-width: 90%;
+}
+
+.botonAsociar {
+  text-decoration: none;
+  font-size: 14px;
+  letter-spacing: 1px;
+  display: inline-block;
+  padding: 14px 32px;
+  border-radius: 4px;
+  color: #fff;
+  /* background-color: #3fbbc0; */
+  /* Cambios -- Clase 8 */
+  background-image: linear-gradient(to right, #3fbbc0, #0083B0);
+}
+
+.botonAsociar:hover {
+  transform: translateY(-3px);
+  transition: all cubic-bezier(0.215, 0.610, 0.355, 1) .8s;
+}
+
+.botonAsociar:active{
+  transform:translateY(3px);
+}
+/* ENTREGA CLASE 10 */
+
+
 
 /* 
     MEDIA QUERIES
